setup prev and next buttons
Allow users to browser when modal window is up

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <h1>Employee Directory</h1>
       <nav>
-        
+
       </nav> <!-- /end header -->
   </header><!-- /end header -->
   <main>
@@ -210,9 +210,8 @@
       </div> <!--/ end panel__main -->
     </div> <!--/ end panel -->
     <!-- modal -->
-    <div class="modal__wrapper">
-      <div class="modal">
-        <div class="wrapper">
+    <div class="modal__wrapper" data-parent="">
+      <div class="modal">        
           <img src="" alt="" class="img">        
           <h2 class="name"></h2>
           <p class="email"></p>
@@ -220,8 +219,9 @@
           <hr />              
           <p class="phone"></p>  
           <p class="address"></p>
-          <p class="birthday"></p>        
-        </div>
+          <p class="birthday"></p>                       
+          <a href="#" class="prev"><< Previous Employee</a> |
+          <a href="#" class="next">Next Employee >>   </a>   
       </div>   <!--/ end modal -->      
     </div>   <!--/ end modal__wrapper -->          
   </main><!--/ end main -->
