more filter fixes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header><!-- /end header -->
   <main>
     <div class="panel">
-            
+        <input type="text" class="search" placeholder="search">            
       <div class="panel__main">        
         <div class="row">
           <div class="col-12">
@@ -206,7 +206,13 @@
               </div>
             </div>
           </div><!--/ end col-4 -->                          
-        </div><!-- end row -->                        
+        </div><!-- end row -->    
+        <div class="row">
+          <div class="col-12 no-matches">
+            <h2>No Matches Found</h2>
+            <p>Sorry no matches were found</p>
+          </div>
+        </div>                    
       </div> <!--/ end panel__main -->
     </div> <!--/ end panel -->
     <!-- modal -->
