fix validation issues with html

--- a/index.html
+++ b/index.html
@@ -218,16 +218,16 @@
     <!-- modal -->
     <div class="modal__wrapper" data-parent="">
       <div class="modal">        
-          <img src="" alt="" class="img">        
-          <h2 class="name"></h2>
+          <img src="https://www.fillmurray.com/100/100" alt="Fill Murray" class="img">        
+          <h2 class="name">Fill Murray</h2>
           <p class="email"></p>
           <p class="city"></p>
           <hr />              
           <p class="phone"></p>  
           <p class="address"></p>
           <p class="birthday"></p>                       
-          <a href="#" class="prev"><< Previous Employee</a> |
-          <a href="#" class="next">Next Employee >>   </a>   
+          <a href="#" class="prev">&laquo; Previous Employee</a> |
+          <a href="#" class="next">Next Employee &raquo;</a>   
       </div>   <!--/ end modal -->      
     </div>   <!--/ end modal__wrapper -->          
   </main><!--/ end main -->
